[package]
name = "oriongraph"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
axum = "0.7"
reqwest = { version = "0.11", features = ["json"] }
urlencoding = "2"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "oriongraph-server"
path = "src/bin/oriongraph-server.rs"

